Adding account type choose page

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
       </p>
     </section>
-    <section class="MainTitle">
-      <p><center>MindField</center></p>
+    <section class="MainFooter">
+      <p><center class="MainTitle">MindField</center></p>
       <div class="Buttons">
-        <button class="JoinButton">Join Us</button>
-        <button class="AboutButton">About Us</button>
+        <a href="templates/accountType.html"><button class="JoinButton">Join Us</button></a>&nbsp
+        <a href="templates/about.html"><button class="AboutButton">About Us</button></a>
       </div>
     </section>
   </body>
