--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <section class="MainSection">
+  <body class="MainSection">
+    <section>
       <p>
         <center class="MainText">
           We will provide you with the best consultants.
