--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="MIndField is a start-up that will help it's users to get access to a community
+    they are comfortable with, get immediate help from professionals and learn more about their mental conditions.">
+    <meta http-equiv="x-dns-prefetch-control" content="on">
     <title>Homepage</title>
     <link rel="stylesheet" href="style/frame1.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
@@ -11,7 +18,7 @@
     ></script>
   </head>
   <body class="MainSection">
-    <section>
+    <section class="col-xs-12 col-md-12">
       <p>
         <center class="MainText">
           We will provide you with the best consultants.
