--- a/index.html
+++ b/index.html
@@ -1,44 +1,61 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
+    />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="MIndField is a start-up that will help it's users to get access to a community
-    they are comfortable with, get immediate help from professionals and learn more about their mental conditions.">
-    <meta http-equiv="x-dns-prefetch-control" content="on">
+    <meta
+      name="description"
+      content="MindField is a start-up that will help it's users to get access to a community
+    they are comfortable with, get immediate help from professionals and learn more about their mental conditions."
+    />
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
     <title>Homepage</title>
     <link rel="stylesheet" href="style/frame1.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://use.fontawesome.com/0b3a233d1a.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="../style/nav.css" />
   </head>
   <body class="MainSection">
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="/templates/about.html">About Us</a></li>
+        <li><a href="/templates/register.html">Login</a></li>
+      </ul>
+    </nav>
     <section class="col-xs-12 col-md-12">
+      <center><img class="Logo" src="/img/logo.png" /></center>
       <p>
         <center class="MainText">
           We will provide you with the best consultants.
         </center>
-        <div class="MainHearts">
-          <center>
-            <i class="fa fa-heart MainIcon"></i>
-            <i class="fa fa-heart MainIcon"></i>
-            <i class="fa fa-heart MainIcon"></i>
-            <i class="fa fa-heart MainIcon"></i>
-            <i class="fa fa-heart MainIcon"></i>
-          </center>
-        </div>
       </p>
     </section>
     <section class="MainFooter">
-      <p><center class="MainTitle">MindField</center></p>
       <div class="Buttons">
-        <a href="templates/accountType.html"><button class="JoinButton">Join Us</button></a>&nbsp
-        <a href="templates/about.html"><button class="AboutButton">About Us</button></a>
+        <a href="templates/accountType.html"
+          ><button class="Button btn-3">Join Us</button></a
+        >&nbsp
+        <a href="templates/about.html"
+          ><button class="Button btn-3">About Us</button></a
+        >
       </div>
     </section>
   </body>
