Made some UI changes

--- a/index.html
+++ b/index.html
@@ -33,15 +33,8 @@
     ></script>
   </head>
   <body class="MainSection">
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="/templates/about.html">About Us</a></li>
-        <li><a href="/templates/register.html">Login</a></li>
-      </ul>
-    </nav>
     <section class="col-xs-12 col-md-12">
-      <center><img class="Logo" src="/img/logo.png" /></center>
+      <center><img class="Logo" src="/docs/assets/img/logo.png" /></center>
       <p>
         <center class="MainText">
           We will provide you with the best consultants.
