--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
   </head>
   <body class="MainSection">
     <section class="col-xs-12 col-md-12">
-      <center><img class="Logo" src="/docs/assets/img/logo.png" /></center>
+      <picture>
+        <center>
+          <img src="img/logo.png" class="MindField-logo" alt="Logo" />
+        </center>
+      </picture>
       <p>
         <center class="MainText">
           We will provide you with the best consultants.
