--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <section class="col-xs-12 col-md-12">
       <picture>
         <center>
-          <img src="img/logoHD.png" class="MindField-logo" alt="Logo" />
+          <img
+            src="img/logoHD.png"
+            class="MindField-logo"
+            alt="MindField Logo"
+          />
         </center>
       </picture>
       <p>
