--- a/index.html
+++ b/index.html
@@ -33,23 +33,12 @@
     ></script>
   </head>
   <body class="MainSection">
-    <section class="col-xs-12 col-md-12">
-      <picture>
-        <center>
-          <img
-            src="img/logoHD.png"
-            class="MindField-logo"
-            alt="MindField Logo"
-          />
-        </center>
-      </picture>
+    <section class="col-xs-12 col-md-12 MainPart">
       <p>
         <center class="MainText">
           We will provide you with the best consultants.
         </center>
       </p>
-    </section>
-    <section class="MainFooter">
       <div class="Buttons">
         <a href="templates/accountType.html"
           ><button class="Button btn-3">Join Us</button></a
